@@ -5,6 +5,10 @@ Revision history for DBIx::Class
         - Fix the find() condition heuristics being invoked even when the
           call defaults to 'primary' (i.e. when invoked with bare values)
 
+    * Misc
+        - No longer depend on Variable::Magic now that a pure-perl
+          namespace::clean is available
+
 0.08195 2011-07-27 16:20 (UTC)
     * Fixes
         - Fix horrible oversight in the Oracle sqlmaker when dealing with
